manifests/infrastructure/controllers/loki.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: logging
