manifests/infrastructure/controllers/kured.yaml
---
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: kured
  namespace: kube-system
  labels:
    app: kured
spec:
  updateStrategy:
    type: OnDelete
  selector:
    matchLabels:
      app: kured
  template:
    metadata:
      labels:
        app: kured
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/path: "/metrics"
        prometheus.io/port: "8080"
    spec:
      serviceAccountName: kured
      hostPID: true
      restartPolicy: Always
      containers:
        - name: kured
          image: weaveworks/kured:1.10.0
          imagePullPolicy: IfNotPresent
          securityContext:
            privileged: true # Give permission to nsenter /proc/1/ns/mnt
          command:
            - sh
            - -c
          args:
            - /usr/bin/kured
                --period=1h0m0s --ds-name=kured --ds-namespace=kube-system
                --prometheus-url=http://prometheus-k8s.monitoring.svc.cluster.local:9090
                --alert-filter-regexp="^Reboot Required$"
                --slack-hook-url=$SLACK_URL
          ports:
            - containerPort: 8080
              name: metrics
      tolerations:
        - effect: NoSchedule
          key: node-role.kubernetes.io/control-plane
