manifests/infrastructure/controllers/promtail.yaml
apiVersion: v1
kind: Service
metadata:
  name: promtail-headless
  namespace: logging
  labels:
    app.kubernetes.io/instance: promtail
    app.kubernetes.io/name: promtail
spec:
  ports:
    - port: 3101
      protocol: TCP
      name: http-metrics
      targetPort: http-metrics
  selector:
    app.kubernetes.io/instance: promtail
    app.kubernetes.io/name: promtail
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: promtail
  namespace: logging
  labels:
    app: promtail
  annotations:
    kubernetes.io/tls-acme: "true"
    cert-manager.io/cluster-issuer: letsencrypt-staging
    traefik.ingress.kubernetes.io/router.middlewares: infra-forward-auth@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
    - host: promtail.cluster.rebelinblue.com
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: promtail-headless
                port:
                  number: 3101
  tls:
    - hosts:
        - promtail.cluster.rebelinblue.com
      secretName: promtail-tls
